模块位置变更，新增缓存模块