@@ -28,7 +28,9 @@ public class ContainerUtil {
 	 */
 	public static boolean compareAllNumbnerMoreNumber(int number, int... all) {
 		if (all == null) { return false; }
-		for (int i = 0; i < all.length; i++) { if (all[i] <= number) { return false; } }
+		for (int i = 0; i < all.length; i++) {
+			if (all[i] <= number) { return false; }
+		}
 		return true;
 	}
 
@@ -42,7 +44,9 @@ public class ContainerUtil {
 	 */
 	public static boolean compareAllNumberLessNumber(int number, int... all) {
 		if (all == null) { return false; }
-		for (int i = 0; i < all.length; i++) { if (all[i] >= number) { return false; } }
+		for (int i = 0; i < all.length; i++) {
+			if (all[i] >= number) { return false; }
+		}
 		return true;
 	}
 
@@ -69,7 +73,9 @@ public class ContainerUtil {
 	 */
 	public static boolean compareAllNumberLessNumberAndMoreNumber(int lower, int upper, int... all) {
 		if (all == null) { return false; }
-		for (int i = 0; i < all.length; i++) { if (all[i] < lower || all[i] > upper) { return false; } }
+		for (int i = 0; i < all.length; i++) {
+			if (all[i] < lower || all[i] > upper) { return false; }
+		}
 		return true;
 	}
 
@@ -123,7 +129,9 @@ public class ContainerUtil {
 	 */
 	public static <T> List<T> upsetList(List<T> list) {
 		if (list == null) { return null; }
-		for (int i = 0; i < list.size(); i++) { swapList(list, i, RandomUtil.randInt(list.size())); }
+		for (int i = 0; i < list.size(); i++) {
+			swapList(list, i, RandomUtil.randInt(list.size()));
+		}
 		return list;
 	}
 
@@ -135,7 +143,9 @@ public class ContainerUtil {
 	 */
 	public static int[] upsetArray(int[] array) {
 		if (array == null) { return null; }
-		for (int i = 0; i < array.length; i++) { swapArrayInt(array, i, RandomUtil.randInt(array.length)); }
+		for (int i = 0; i < array.length; i++) {
+			swapArrayInt(array, i, RandomUtil.randInt(array.length));
+		}
 		return array;
 	}
 
@@ -159,7 +169,9 @@ public class ContainerUtil {
 		// ArrayList初始赋值
 		List<Integer> list = new ArrayList<Integer>(init > 10 ? init : 10);
 		// 对list赋范围内的值
-		for (int i = start; i < end; i++) { list.add(i); }
+		for (int i = start; i < end; i++) {
+			list.add(i);
+		}
 		// 对list进行乱序
 		return upsetList(list);
 	}
@@ -182,7 +194,9 @@ public class ContainerUtil {
 		int init = end - start;
 		if (init == 0) { return null; }
 		int array[] = new int[init];
-		for (int i = start; i < end; i++) { array[i - start] = i; }
+		for (int i = start; i < end; i++) {
+			array[i - start] = i;
+		}
 		// 对数组进行乱序
 		return upsetArray(array);
 	}
@@ -264,9 +278,9 @@ public class ContainerUtil {
 	/**
 	 * 获取某个List某个类型
 	 * 
-	 * @param <T>    列表泛型
-	 * @param list   传入的列表
-	 * @param mapper lambda表达式
+	 * @param <T>       列表泛型
+	 * @param list      传入的列表
+	 * @param predicate lambda表达式
 	 * @return List<R> 过滤后的列表
 	 */
 	public static <T> List<T> listFilterList(List<T> list, Predicate<? super T> predicate) {
@@ -302,8 +316,11 @@ public class ContainerUtil {
 		value = map.get(key);
 		if (value == null) {
 			try {
-				value = classes.newInstance();
-			} catch (InstantiationException | IllegalAccessException e) {
+				// jdk8的方法
+//				value = classes.newInstance();
+				// jdk9之后的方法
+				value = classes.getDeclaredConstructor().newInstance();
+			} catch (Exception e) {
 				throw new RuntimeException(e);
 			}
 			map.put(key, value);
@@ -319,7 +336,11 @@ public class ContainerUtil {
 	 * @return true:存在/false:不存在
 	 */
 	public static boolean stringInList(String string, List<String> list) {
-		if (list != null) { for (String str : list) { if (StringUtil.eqString(string, str)) { return true; } } }
+		if (list != null) {
+			for (String str : list) {
+				if (StringUtil.eqString(string, str)) { return true; }
+			}
+		}
 		return false;
 	}
 
@@ -331,7 +352,11 @@ public class ContainerUtil {
 	 * @return true:存在/false:不存在
 	 */
 	public static boolean stringInArray(String string, String str[]) {
-		if (str != null) { for (String st : str) { if (StringUtil.eqString(string, st)) { return true; } } }
+		if (str != null) {
+			for (String st : str) {
+				if (StringUtil.eqString(string, st)) { return true; }
+			}
+		}
 		return false;
 	}
 
@@ -348,7 +373,9 @@ public class ContainerUtil {
 		if (arr == null) { return true; }
 		if (data == null) { return false; }
 		data = data.toLowerCase();
-		for (String str : arr) { if (data.indexOf(str) != -1) { return true; } }
+		for (String str : arr) {
+			if (data.indexOf(str) != -1) { return true; }
+		}
 		return false;
 	}
 
@@ -364,7 +391,9 @@ public class ContainerUtil {
 		if (list == null) { return true; }
 		if (data == null) { return false; }
 		data = data.toLowerCase();
-		for (String str : list) { if (data.indexOf(str) != -1) { return true; } }
+		for (String str : list) {
+			if (data.indexOf(str) != -1) { return true; }
+		}
 		return false;
 	}
 
@@ -376,7 +405,11 @@ public class ContainerUtil {
 	 * @return true:存在/false:不存在
 	 */
 	public static boolean charInArray(char chr, char[] chars) {
-		if (chars != null) { for (char c : chars) { if (c == chr) { return true; } } }
+		if (chars != null) {
+			for (char c : chars) {
+				if (c == chr) { return true; }
+			}
+		}
 		return false;
 	}
 
@@ -388,7 +421,9 @@ public class ContainerUtil {
 	 * @return true:存在/false:不存在
 	 */
 	public static boolean intInList(int i, List<Integer> list) {
-		for (Integer integer : list) { if (integer == i) { return true; } }
+		for (Integer integer : list) {
+			if (integer == i) { return true; }
+		}
 		return false;
 	}
 
@@ -400,7 +435,54 @@ public class ContainerUtil {
 	 * @return true:存在/false:不存在
 	 */
 	public static boolean intInArray(int i, int[] ints) {
-		for (int j : ints) { if (j == i) { return true; } }
+		for (int j : ints) {
+			if (j == i) { return true; }
+		}
 		return false;
 	}
+
+	/**
+	 * 判断key释放在列表中出现，key可以为Null，如果为Null,，则查找null<br>
+	 * 此方法仅适合基础包装类型
+	 * 
+	 * @param key  要查找的唯一标识
+	 * @param list 列表
+	 * @return true:存在/false:不存在
+	 */
+	public static boolean objectInList(Object key, List<Object> list) {
+		// 查找的key为Null的情况
+		if (key == null) {
+			for (Object object : list) {
+				if (object == null) { return true; }
+			}
+		} else {
+			for (Object object : list) {
+				if (key.equals(object)) { return true; }
+			}
+		}
+		return false;
+	}
+
+	/**
+	 * 判断key释放在数组中出现，key可以为Null，如果为Null,，则查找null<br>
+	 * 此方法仅适合基础包装类型
+	 * 
+	 * @param key   要查找的唯一标识
+	 * @param array 对象数组
+	 * @return true:存在/false:不存在
+	 */
+	public static boolean objectInArrayu(Object key, Object[] array) {
+		// 查找的key为Null的情况
+		if (key == null) {
+			for (Object object : array) {
+				if (object == null) { return true; }
+			}
+		} else {
+			for (Object object : array) {
+				if (key.equals(object)) { return true; }
+			}
+		}
+		return false;
+	}
+
 }
